--- a/index.html
+++ b/index.html
@@ -54,65 +54,75 @@
                 <h3>que estas esperando?</h3>
             </span> 
         -->
-            <article>
+            <article class="Producto">
                 <img src="./imagenes/empty-photo.jpg">
                 <h3>Producto 1</h3>
                 <h4>$15.350</h4>
                 <button>Comprar</button>
+                <button>ver</button>
             </article>
-            <article>
+            <article class="Producto">
                 <img src="./imagenes/empty-photo.jpg">
                 <h3>Producto 2</h3>
                 <h4>$15.350</h4>
                 <button>Comprar</button>
+                <button>ver</button>
             </article>
-                <article>
+            <article class="Producto">
                 <img src="./imagenes/empty-photo.jpg">
                 <h3>Producto 3</h3>
                 <h4>$15.350</h4>
                 <button>Comprar</button>
+                <button>ver</button>
             </article>
-            <article>
+            <article class="Producto">
                 <img src="./imagenes/empty-photo.jpg">
                 <h3>Producto 4</h3>
                 <h4>$15.350</h4>
                 <button>Comprar</button>
+                <button>ver</button>
             </article>
-            <article>
+            <article class="Producto">
                 <img src="./imagenes/empty-photo.jpg">
                 <h3>Producto 5</h3>
                 <h4>$15.350</h4>
                 <button>Comprar</button>
+                <button>ver</button>
             </article>
-            <article>
+            <article class="Producto">
                 <img src="./imagenes/empty-photo.jpg">
                 <h3>Producto 6</h3>
                 <h4>$15.350</h4>
                 <button>Comprar</button>
+                <button>ver</button>
             </article>
-            <article>
+            <article class="Producto">
                 <img src="./imagenes/empty-photo.jpg">
                 <h3>Producto 7</h3>
                 <h4>$15.350</h4>
                 <button>Comprar</button>
+                <button>ver</button>
             </article>
-            <article>
+            <article class="Producto">
                 <img src="./imagenes/empty-photo.jpg">
                 <h3>Producto 8</h3>
                 <h4>$15.350</h4>
                 <button>Comprar</button>
+                <button>ver</button>
             </article>
-            <article>
+            <article class="Producto">
                 <img src="./imagenes/empty-photo.jpg">
                 <h3>Producto 9</h3>
                 <h4>$15.350</h4>
                 <button>Comprar</button>
+                <button>ver</button>
             </article>
-            <article>
+            <article class="Producto">
                 <img src="./imagenes/empty-photo.jpg">
                 <h3>Producto 10</h3>
                 <h4>$15.350</h4>
                 <button>Comprar</button>
+                <button>ver</button>
             </article>
         </div>
         
@@ -124,35 +134,35 @@
         </div>
         <div id="marcas">
               <!-- <h2>Ofertas</h2> -->
-          <article class="marca">
-            <img src="./imagenes/empty-photo.jpg">
-        </article>
-        <article class="marca">
-            <img src="./imagenes/empty-photo.jpg">
-        </article>
-        <article class="marca">
-            <img src="./imagenes/empty-photo.jpg">
-        </article>
-        <article class="marca">
-            <img src="./imagenes/empty-photo.jpg">
-        </article>
-        <article class="marca">
-                <img src="./imagenes/empty-photo.jpg">
+            <article class="marca">
+                <img src="./imagenes/1.png">
             </article>
             <article class="marca">
-                <img src="./imagenes/empty-photo.jpg">
+                <img src="./imagenes/2.png">
             </article>
             <article class="marca">
-                <img src="./imagenes/empty-photo.jpg">
+                <img src="./imagenes/3.png">
             </article>
             <article class="marca">
-                <img src="./imagenes/empty-photo.jpg">
+                <img src="./imagenes/4.png">
             </article>
             <article class="marca">
-                <img src="./imagenes/empty-photo.jpg">
+                <img src="./imagenes/5.png">
             </article>
             <article class="marca">
-                <img src="./imagenes/empty-photo.jpg">
+                <img src="./imagenes/6.png">
+            </article>
+            <article class="marca">
+                <img src="./imagenes/7.png">
+            </article>
+            <article class="marca">
+                <img src="./imagenes/8.png">
+            </article>
+            <article class="marca">
+                <img src="./imagenes/9.png">
+            </article>
+            <article class="marca">
+                <img src="./imagenes/10.png">
             </article>
         </div>
         <div id="footer">
