--- a/Productos.html
+++ b/Productos.html
@@ -9,7 +9,15 @@
     <link rel="stylesheet" href="Productos.css" />
 </head>
 <body>
-    <div id="grilla"> 
+    <div id="grilla-productos"> 
+         <!-- INICIO HEADER -->
+         <div id="sobre-header">
+            <ul>
+                <li>Telefono: +54 9 11 5142-2836</li>
+                <li>Redes sociales:...</li>
+            </ul>
+        </div>
+
         <div id="header">
             <div id="header__logo" class="border">
                 <img src="./Imagenes/LOGO.png" id="header__logo__imagen">
@@ -23,18 +31,19 @@
                     <a href="carrito"><img src="./Imagenes/carrito.png" width="30" height="30"><li class="navLetras"></li></a>
                 </ul>
             </div>
-            
-            <div id="header__nav-inf" class="border">
-                <hr>
-                <ul class="nav1">
-                    <a href="index.html"><li class="navLetras">Inicio</li></a>
-                    <a href="productos.html"><li class="navLetras">Productos</li></a>
-                    <a href="ofertas.html"><li class="navLetras">Ofertas</li></a>
-                    <a href="sobre-nosotros.html"><li class="navLetras">Sobre nosotros</li></a>
-                    <a href="contacto.html"><li class="navLetras">Contacto</li></a>
-                </ul>
-            </div>
         </div>
+
+        <div id="nav-header">
+            <ul class="nav1">
+                <a href="index.html"><li class="navLetras">Inicio</li></a>
+                <a href="productos.html"><li class="navLetras">Productos</li></a>
+                <a href="ofertas.html"><li class="navLetras">Ofertas</li></a>
+                <a href="sobre-nosotros.html"><li class="navLetras">Sobre nosotros</li></a>
+                <a href="contacto.html"><li class="navLetras">Contacto</li></a>
+            </ul>
+        </div>
+        <!-- FIN HEADER -->
+        <!-- INICIO BODY -->
 
         <div id="categorias">
             <h2>Categorias</h2>
