--- a/Productos.html
+++ b/Productos.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="shortcut icon" href="./Imagenes/LOGO.png">
-    <link rel="stylesheet" href="Productos.css" />
+    <link rel="stylesheet" href="Index.css" />
 </head>
 <body>
     <div id="grilla-productos"> 
@@ -89,48 +89,86 @@
             </ul>   
         </div>
         <div id="principal">
-            <article>
-                <img src="./imagenes/empty-photo.jpg">
-                <h3>Producto 1</h3>
+            <article class="Producto">
+                <img src="./imagenes/1.jpg">
+                <h3>| puerta delantera izquierda Nivus</h3>
+                <h4>$15.350</h4>
                 <button>Comprar</button>
+                <button>ver</button>
             </article>
-            <article>
-                <img src="./imagenes/empty-photo.jpg">
-                <h3>Producto 2</h3>
+            <article class="Producto">
+                <img src="./imagenes/2.jpg">
+                <h3>| porton trasero peugeot 308
+                </h3>
+                <h4>$15.350</h4>
                 <button>Comprar</button>
+                <button>ver</button>
             </article>
-            <article>
-                <img src="./imagenes/empty-photo.jpg">
-                <h3>Producto 3</h3>
+            <article class="Producto">
+                <img src="./imagenes/3.jpg">
+                <h3>| Puerta delantera derecha Nivus
+                </h3>
+                <h4>$15.350</h4>
                 <button>Comprar</button>
+                <button>ver</button>
             </article>
-            <article>
-                <img src="./imagenes/empty-photo.jpg">
-                <h3>Producto 4</h3>
+            <article class="Producto">
+                <img src="./imagenes/4.jpg">
+                <h3>| porton trasero ford Ka
+                </h3>
+                <h4>$15.350</h4>
                 <button>Comprar</button>
+                <button>ver</button>
             </article>
-            <article>
-                <img src="./imagenes/empty-photo.jpg">
-                <h3>Producto 5</h3>
+            <article class="Producto">
+                <img src="./imagenes/5.jpg">
+                <h3>| guardabarro trasero izquierdo fiat qubo
+                </h3>
+                <h4>$15.350</h4>
                 <button>Comprar</button>
+                <button>ver</button>
             </article>
-            <article>
-                <img src="./imagenes/empty-photo.jpg">
-                <h3>Producto 6</h3>
+            <article class="Producto">
+                <img src="./imagenes/6.jpg">
+                <h3>| guardabarro trasero derecho prisma
+                </h3>
+                <h4>$15.350</h4>
                 <button>Comprar</button>
+                <button>ver</button>
             </article>
-            <article>
-                <img src="./imagenes/empty-photo.jpg">
-                <h3>Producto 7</h3>
+            <article class="Producto">
+                <img src="./imagenes/7.jpg">
+                <h3>| Guardabarro trasero derecho vento 11/18
+                </h3>
+                <h4>$15.350</h4>
                 <button>Comprar</button>
+                <button>ver</button>
             </article>
-            <article>
-                <img src="./imagenes/empty-photo.jpg">
-                <h3>Producto 8</h3>
+            <article class="Producto">
+                <img src="./imagenes/8.jpg">
+                <h3>| Puerta delantera derecha prisma / onix
+                </h3>
+                <h4>$15.350</h4>
                 <button>Comprar</button>
+                <button>ver</button>
+            </article>
+            <article class="Producto">
+                <img src="./imagenes/9.jpg">
+                <h3>| Puerta delantera izquierda ecosport kinetic
+                </h3>
+                <h4>$15.350</h4>
+                <button>Comprar</button>
+                <button>ver</button>
+            </article>
+            <article class="Producto">
+                <img src="./imagenes/10.jpg">
+                <h3>| Puerta delantera izquierda fiat mobi
+                </h3>
+                <h4>$15.350</h4>
+                <button>Comprar</button>
+                <button>ver</button>
             </article>
         </div>
-
         <div id="footer">
             <div class="textoFooter">
                 <h5>Lorem salutandi eu mea, eam in soleat iriure assentior. <br> Tamquam lobortis id qui. Ea sanctus democritum mei, per eu alterum electram adversarium. <br> Ea vix probo dicta iuvaret, posse epicurei suavitate eam an, nam et vidit menandri. <br> Ut his accusata petentium.</h5>
