--- a/sobre-nosotros.html
+++ b/sobre-nosotros.html
@@ -6,53 +6,85 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="shortcut icon" href="./Imagenes/LOGO.png">
-    <link rel="stylesheet" href="sobre-nosotros.css" />
+    <link rel="stylesheet" href="Index.css" />
 </head>
 <body>
-    <header>
-        <Div class="headerSuperior">
-            <div class="headerSuperior__logo">
-                <img src="./Imagenes/LOGO.png" alt="Logo" class="logo">
+    <div id="grilla-nosotros"> 
+         <!-- INICIO HEADER -->
+         <div id="sobre-header">
+            <ul>
+                <li>Telefono: +54 9 11 5142-2836</li>
+                <li>Redes sociales:...</li>
+            </ul>
+        </div>
+
+        <div id="header">
+            <div id="header__logo" class="border">
+                <img src="./Imagenes/LOGO.png" id="header__logo__imagen">
+            </div>
+            <div id="header__buscador" class="border">
+                <input type="search">
+            </div>
+            <div id="header__nav-sup" class="border">
+                <ul class="nav">
+                    <a href="mi cuenta"><img src="./Imagenes/mi cuenta.png" width="30" height="30"><li class="navLetras"></li></a>
+                    <a href="carrito"><img src="./Imagenes/carrito.png" width="30" height="30"><li class="navLetras"></li></a>
+                </ul>
+            </div>
+        </div>
+
+        <div id="nav-header">
+            <ul class="nav1">
+                <a href="index.html"><li class="navLetras">Inicio</li></a>
+                <a href="productos.html"><li class="navLetras">Productos</li></a>
+                <a href="ofertas.html"><li class="navLetras">Ofertas</li></a>
+                <a href="sobre-nosotros.html"><li class="navLetras">Sobre nosotros</li></a>
+                <a href="contacto.html"><li class="navLetras">Contacto</li></a>
+            </ul>
+        </div>
+        <!-- FIN HEADER -->
+        <!-- INICIO BODY -->
+
+        <div class="nosotros">
+            <img src="./Imagenes/quienes somos.jpg" alt="">
+            <h1 class="blanco">Sobre nosotros</h1>
+            <h3 class="blanco">Lorem salutandi eu mea, eam in soleat iriure assentior. Tamquam lobortis id qui. Ea sanctus democritum mei, per eu alterum electram adversarium. Ea vix probo dicta iuvaret, posse epicurei suavitate eam an, nam et vidit menandri. Ut his accusata petentium.</h3>
+        </div>
+        <div class="eleginos">
+            <div class="texto">
+                <h2 class="blanco">Por que elegirnos?</h2>
+                <h3 class="blanco">
+                    <ul>
+                        <il>caca</il>
+                        <il>pis</il>
+                        <il>caca</il>
+                        <il>pis</il>
+                    </ul>
+                </h3>
+            </div>
+            <div class="foto">
+                <img src="./imagenes/LOGO.png" alt="">
             </div>
             
-            <ul class="headerSuperior__nav">
-                <a href="mi cuenta"><img src="./Imagenes/mi cuenta.png" width="60" height="60"><li class="navLetras">Mi cuenta</li></a>
-                <a href="carrito"><img src="./Imagenes/carrito.png" width="60" height="60"><li class="navLetras">Carrito</li></a>
-            </ul>
-            <div class="headerSuperior__buscador">
-                <input type="search" class="buscador">
+        </div>
+        <!-- FIN BODY -->
+        <!-- INICIO FOOTER -->
+        <div id="footer">
+            <div class="textoFooter">
+                <h5>Lorem salutandi eu mea, eam in soleat iriure assentior. <br> Tamquam lobortis id qui. Ea sanctus democritum mei, per eu alterum electram adversarium. <br> Ea vix probo dicta iuvaret, posse epicurei suavitate eam an, nam et vidit menandri. <br> Ut his accusata petentium.</h5>
             </div>
-        </Div> <hr>
-        <ul class="navegador">
-            <a href="index.html"><li class="navLetras">Inicio</li></a>
-            <a href="productos.html"><li class="navLetras">Productos</li></a>
-            <a href="ofertas.html"><li class="navLetras">Ofertas</li></a>
-            <a href="sobre-nosotros.html"><li class="navLetras">Sobre nosotros</li></a>
-            <a href="contacto.html"><li class="navLetras">Contacto</li></a>
-        </ul>
-    </header>  
-
-    <hr>
-    
-    <h1>Sobre nosotros</h1>
-    <h3>Lorem salutandi eu mea, eam in soleat iriure assentior. Tamquam lobortis id qui. Ea sanctus democritum mei, per eu alterum electram adversarium. Ea vix probo dicta iuvaret, posse epicurei suavitate eam an, nam et vidit menandri. Ut his accusata petentium.</h3>
-
-    <hr>
-    <footer>
-        <div class="textoFooter">
-            <h5>Lorem salutandi eu mea, eam in soleat iriure assentior. <br> Tamquam lobortis id qui. Ea sanctus democritum mei, per eu alterum electram adversarium. <br> Ea vix probo dicta iuvaret, posse epicurei suavitate eam an, nam et vidit menandri. <br> Ut his accusata petentium.</h5>
+        <div class="redesSociales">
+            <ul 
+                il><img src="./Imagenes/87390.png" alt="" width="30" height="30">instagram</il>
+                <br>
+                <il> <img src="./Imagenes/face.png" alt="" width="30" height="30"  >facebook</il>
+                <br>
+                <il><img src="./Imagenes/whatsa.png" alt="" width="30" height="30">whatsapp</il>
+            </ul>
         </div>
-        <ul class="redesSociales">
-            <il><img src="./Imagenes/87390.png" alt="" width="30" height="30">instagram</il>
-            <br>
-            <il> <img src="./Imagenes/face.png" alt="" width="30" height="30"  >facebook</il>
-            <br>
-            <il><img src="./Imagenes/whatsa.png" alt="" width="30" height="30">whatsapp</il>
-        </ul>
         <div class="mapa">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13135.454002386676!2d-58.4515826!3d-34.607613!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcca1189c237db%3A0x7d00b48da5073e21!2sCid%20Campeador!5e0!3m2!1ses-419!2sar!4v1643228929457!5m2!1ses-419!2sar" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13135.454002386676!2d-58.4515826!3d-34.607613!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcca1189c237db%3A0x7d00b48da5073e21!2sCid%20Campeador!5e0!3m2!1ses-419!2sar!4v1643228929457!5m2!1ses-419!2sar" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         </div>
-    </footer>
-
+    </div>
 </body>
 </html>
