--- a/contacto.html
+++ b/contacto.html
@@ -7,6 +7,10 @@
     <title>Document</title>
     <link rel="shortcut icon" href="./Imagenes/LOGO.png">
     <link rel="stylesheet" href="Index.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Dongle:wght@300&family=Montserrat:wght@100&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Dongle:wght@300&family=Montserrat:wght@100&family=Nunito&display=swap" rel="stylesheet">
 </head>
 <body>
     <div id="grilla-contacto"> 
@@ -46,7 +50,7 @@
         <!-- INICIO BODY -->
     <hr>
     <div class="aside">
-        <h1>CONTACTO</h1>
+        <h1>Contacto</h1>
         <h4>En caso de necesitar una lista extensa de repuestos para cotizar llenar el siguiente formulario y le contestaremos a la brevedad. Especificar: Marca ; Modelo y año del vehiculo, de ser posible, agregar: Numero de patente y Numero de chasis. Muchas gracias!</h4>
         <ul>
             <a href="whatsapp"><img src="./Imagenes/whatsa.png" width="30" height="30"><li class="navLetras">1551422836</li></a>
