--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <title>Document</title>
     <link rel="shortcut icon" href="./Imagenes/LOGO.png">
     <link rel="stylesheet" href="Index.css" />
-    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Dongle:wght@300&family=Montserrat:wght@100&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Dongle:wght@300&family=Montserrat:wght@100&family=Nunito&display=swap" rel="stylesheet">
 </head>
 <body>
     <div id="grilla"> 
@@ -128,9 +131,9 @@
         
         <div id="sobre-nosotros">
             <h2>Sobre nosotros</h2>
-            <p>Lorem salutandi eu mea, eam in soleat iriure assentior.Tamquam lobortis id qui. Ea sanctus democritum mei, per eu alterum electram adversarium. Ea vix probo dicta iuvaret, posse epicurei suavitate eam an, nam et vidit menandri. Ut his accusata petentium.
+            <h3>Lorem salutandi eu mea, eam in soleat iriure assentior.Tamquam lobortis id qui. Ea sanctus democritum mei, per eu alterum electram adversarium. Ea vix probo dicta iuvaret, posse epicurei suavitate eam an, nam et vidit menandri. Ut his accusata petentium.
             Tamquam lobortis id qui. Ea sanctus democritum mei, per eu alterum electram adversarium. Ea vix probo dicta iuvaret, posse epicurei suavitate eam an, nam et vidit menandri. Ut his accusata petentium
-            </p>
+            </h3>
         </div>
         <div id="marcas">
               <!-- <h2>Ofertas</h2> -->
