--- a/contacto.html
+++ b/contacto.html
@@ -61,17 +61,17 @@
         <form action="formulario__contacto">
             <fieldset>
                 <h4>Nombre</h4>
-                <input type="text" placeholder="Juan Ejemplo">
-                <br> <br>
+                <input type="text" placeholder="">
+                <br> <br class="none">
                 <h4>Telefono</h4>
                 <input type="text" placeholder="11 5142-2836">
-                <br> <br>
+                <br> <br class="none">
                 <h4>Mail</h4>
                 <input type="E-mail" placeholder="Ejemplo@gmail.com">
-                <br> <br>
+                <br> <br class="none">
                 <h4>Dejanos tu consulta</h4>
-                <textarea name="text" placeholder="Escriba aqui"></textarea>
-                <br> <br>
+                <textarea name="text" placeholder=""></textarea>
+                <br> <br class="none">
                 <input type="submit" class="submit">
             </fieldset>
             </form>
