--- a/index.html
+++ b/index.html
@@ -36,6 +36,21 @@
                 </ul>
             </div>
         </div>
+        <!--
+        <div id="menu-hambur">
+            <input type="checkbox">
+            <i class="fas fa-bars"></i>
+            <i class="fas fa-times"></i>
+            <nav>
+                <ul>
+                    <a href="index.html"><li class="navLetras">Inicio</li></a>
+                <a href="productos.html"><li class="navLetras">Productos</li></a>
+                <a href="ofertas.html"><li class="navLetras">Ofertas</li></a>
+                <a href="sobre-nosotros.html"><li class="navLetras">Sobre nosotros</li></a>
+                <a href="contacto.html"><li class="navLetras">Contacto</li></a>
+                </ul>
+            </nav>
+        </div> -->
 
         <div id="nav-header">
             <ul class="nav1">
