--- a/index.html
+++ b/index.html
@@ -36,21 +36,20 @@
                 </ul>
             </div>
         </div>
-        <!--
+        <!---->
         <div id="menu-hambur">
-            <input type="checkbox">
-            <i class="fas fa-bars"></i>
-            <i class="fas fa-times"></i>
-            <nav>
-                <ul>
-                    <a href="index.html"><li class="navLetras">Inicio</li></a>
+            <label class="logo"></label>
+            <ul class="menu-items">
+                <a href="index.html"><li class="navLetras">Inicio</li></a>
                 <a href="productos.html"><li class="navLetras">Productos</li></a>
                 <a href="ofertas.html"><li class="navLetras">Ofertas</li></a>
                 <a href="sobre-nosotros.html"><li class="navLetras">Sobre nosotros</li></a>
                 <a href="contacto.html"><li class="navLetras">Contacto</li></a>
-                </ul>
-            </nav>
-        </div> -->
+            </ul>
+        </div> 
+        <span class="btn-menu">
+            <i class="fa fa-bars"></i>
+        </span>
 
         <div id="nav-header">
             <ul class="nav1">
@@ -199,7 +198,7 @@
             <div class="mapa">
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13135.454002386676!2d-58.4515826!3d-34.607613!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcca1189c237db%3A0x7d00b48da5073e21!2sCid%20Campeador!5e0!3m2!1ses-419!2sar!4v1643228929457!5m2!1ses-419!2sar" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
             </div>
-        </div> -->
+        </div>
     </div>
     
 </body>
