--- a/sobre-nosotros.html
+++ b/sobre-nosotros.html
@@ -51,19 +51,19 @@
         <!-- INICIO BODY -->
 
         <div class="nosotros">
-            <img src="./Imagenes/quienes somos.jpg" alt="">
             <h1 class="blanco">Sobre nosotros</h1>
             <h3 class="blanco">Lorem salutandi eu mea, eam in soleat iriure assentior. Tamquam lobortis id qui. Ea sanctus democritum mei, per eu alterum electram adversarium. Ea vix probo dicta iuvaret, posse epicurei suavitate eam an, nam et vidit menandri. Ut his accusata petentium.</h3>
+            <img src="./Imagenes/quienes somos.jpg" alt="">
         </div>
         <div class="eleginos">
             <div class="texto">
                 <h2 class="blanco">Por que elegirnos?</h2>
                 <h3 class="blanco">
                     <ul>
-                        <il>caca</il>
-                        <il>pis</il>
-                        <il>caca</il>
-                        <il>pis</il>
+                        <il>- experiencia de mas de 20 años en el mercado</il>
+                        <il>- envios a todo el pais</il>
+                        <il>- asesoramiento personalizado</il>
+                        <il>- seguimiento posventa</il>
                     </ul>
                 </h3>
             </div>
