--- a/index.html
+++ b/index.html
@@ -50,10 +50,6 @@
                 </ul>
             </div>
         </div>
-        
-
-        
-
         <div id="nav-header">
             <ul class="nav1">
                 <a href="index.html"><li class="navLetras">Inicio</li></a>
@@ -71,7 +67,11 @@
 
         <div id="sobre-nosotros">
             <article class="marca">
-                <img src="./imagenes/1.png">
+                <img src="./imagenes/envios.png">
+                <div>
+                    <h5>Envios</h5>
+                    <h4>Realizamos envios a todo el pais</h4>
+                </div>
             </article>
             <article class="marca">
                 <img src="./imagenes/2.png">
